--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ python-dotenv = "^0.21.0"
 pip = "^22.2.2"
 install = "^1.3.5"
 google-cloud-storage = "^2.5.0"
-git = "https://djamescassidy:Okrhcf90200!@github.com/djamescassidy/testcli.git"
+genson = "^1.2.2"
+
 
 
 [tool.poetry.dev-dependencies]
